<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Easy Marks</string>
    <string name="title_activity_pantalla_principal">Pantalla Pricipal</string>
    <string name="title_activity_editar_notas">Editar Notas</string>
    <string name="title_activity_hacer_media">Hacer Media</string>
    <string name="title_activity_introducir_nota">Introducir Nota</string>
    <string name="title_activity_borrar_nota">Borrar Nota</string>
    <string name="title_activity_ver_notas">Ver Notas</string>
    <string name="tvElegirAcción">Introduzca una acción:</string>
    <string name="btEditarNotas">Editar Notas</string>
    <string name="btHacerMedia">Hacer Media</string>
    <string name="btIntroducirNota">Introducir Nota</string>
    <string name="btBorrarNota">Borrar Nota</string>
    <string name="btVerNotas">Ver Notas</string>
    <string name="tvAsignatura">Asignatura</string>
    <string name="tvNota">Nota</string>
    <string name="tvFecha">Fecha</string>
    <string-array name="Asignaturas">
        <item>Lengua</item>
        <item>Matemáticas</item>
        <item>Física y Química</item>
        <item>Biología</item>
        <item>Inglés</item>
        <item>Geografía</item>
        <item>Francés</item>
    </string-array>

</resources>
