<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.david.easymarks.PantallaPrincipal"
    android:id="@+id/RelativeLayout">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tvElegirAcción"
        android:id="@+id/tvElegirAccion"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btEditarNotas"
        android:id="@+id/btEditarNotas"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/tvElegirAccion"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btHacerMedia"
        android:id="@+id/btHacerMedia"
        android:layout_below="@+id/btEditarNotas"
        android:layout_marginTop="40dp"
        android:layout_alignLeft="@+id/btEditarNotas"
        android:layout_alignStart="@+id/btEditarNotas"
        android:layout_alignRight="@+id/btEditarNotas"
        android:layout_alignEnd="@+id/btEditarNotas" />

</RelativeLayout>
