<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.david.easymarks.IntroducirNota">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tvAsignatura"
        android:id="@+id/tvAsignatura"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spAsignatura"
        android:layout_below="@+id/tvAsignatura"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tvNota"
        android:id="@+id/tvNota"
        android:layout_below="@+id/spAsignatura"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/etNota"
        android:layout_below="@+id/tvNota"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="Nota" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tvFecha"
        android:id="@+id/tvFecha"
        android:layout_below="@+id/etNota"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/etFecha"
        android:layout_below="@+id/tvFecha"
        android:layout_alignRight="@+id/etNota"
        android:layout_alignEnd="@+id/etNota"
        android:layout_marginTop="20dp"
        android:hint="Fecha" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btIntroducirNota"
        android:id="@+id/btIntroducirNotaAceptar"
        android:layout_below="@+id/etFecha"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp" />

</RelativeLayout>
